# openInventory-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  centos_install.sh  centos_start.sh  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: msvc.yml
include/: api.hpp  http_server.cpp  http_server.h  webserver.hpp
src/: api.cpp  main.cpp  webserver.cpp
unit_testing/: utest_pocolib.cpp
